# kabam_msgs

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
action/: MissionControl.action  PabxAnnouncement.action
msg/: ChargerState.msg  LiftState.msg  LiftStateArray.msg  MapAnnotation.msg  MapAnnotationArray.msg  MapInfo.msg  MapList.msg  MapMetaData.msg  MapWaypoint.msg  MapWaypointList.msg  Mission.msg  MissionList.msg  Sensor.msg  Task.msg  TaskParam.msg  Waypoint.msg  Waypoint2List.msg  WaypointList.msg
srv/: AnnotateMap.srv  GetLastWpReached.srv  GetMissionDetails.srv  GetMissionList.srv  GetMissions.srv  GetWaypoint.srv  LoadMap.srv  ManageWaypoint.srv  SaveMap.srv  SetFloat.srv  UpdateMap.srv
