<?xml version="1.0"?>
<package format="3">
  <name>kabam_msgs</name>
  <version>0.0.0</version>
  <description>The kabam_msgs package has custom ROS message, service and action interfaces used at KABAM</description>

  <maintainer email="swarooph@kabam.ai">Swarooph Seshadri</maintainer>

  <license>BSD</license>
  
  <url type="website">https://kabam.ai/</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
